# zesa_project

./: .gitignore  README.md  readme.md
Frontend/zesa_app/: README.md  pubspec.yaml
Frontend/zesa_app/android/app/: build.gradle.kts
Frontend/zesa_app/assets/animations/: charging-electricity.json
Frontend/zesa_app/ios/Runner/: Info.plist
Frontend/zesa_app/ios/Runner.xcodeproj/: project.pbxproj
Frontend/zesa_app/lib/: main.dart
Frontend/zesa_app/lib/components/: actionTile.dart  (+18 more)
Frontend/zesa_app/linux/: CMakeLists.txt
Frontend/zesa_app/test/: widget_test.dart
Frontend/zesa_app/web/: index.html  manifest.json
Frontend/zesa_app/windows/: CMakeLists.txt
MesaSimulation/: services.py  solarGenSim.py
nodeFabric/: connection-profile.json  package-lock.json  package.json  tsconfig.json
nodeFabric/src/: app.ts  server.ts
nodeFabric/src/fabric/: gateway.ts  initiateTrans.ts  query.ts  register.ts  submit.ts
nodeFabric/src/routes/: fabric.ts
nodeFabric/src/scripts/: enrollmentKey.ts
nodeFabric/wallets/: admin.id  user_appUser1.id  user_appUser2.id  user_appUser3.id  user_appUser4.id  user_appUser5.id
zesa_project_final/: Hybrid Blockchain Integration Plan.md  ImplementationPlan.md  SolarSimulationWorkFlow.md  pyproject.toml
zesa_project_final/src/zesa_project_final/: auth.py  blockchain.py  chainUtils.py  dependencies.py  main.py  modelData.py  models.py  pydanticModels.py  routes.py  scheduler.py  simService.py  utils.py  weatherInfo.py
zesa_project_final/src/zesa_project_final/AGB_Simulation/: P2P_SolarSharingSimulation.ipynb  solar_data.csv
(+22 files in other folders)
