[project]
name = "zesa-project-final"
version = "0.1.0"
description = ""
authors = [
    {name = "Taku(Zhira03)",email = "tzhira8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "zesa_project_final", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
